--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,6 @@ Author: Ricard Illa
 Maintainer: Ricard Illa <ricard.illa@irbbarcelona.org>
 Description: Single nucleosome molecule dynamics bewteen two reference states
 License: FreeBSD
-Depends: methods, BiocGenerics, IRanges, GenomicRanges, nucleR, Biobase, parallel
-Imports: methods, BiocGenerics, IRanges, GenomicRanges, nucleR, Biobase, parallel
+Imports: methods, S4Vectors, BiocGenerics, IRanges, GenomicRanges, nucleR, parallel
 LazyLoad: yes
 Packaged: 2014-08-21 15:12:54 UTC; rilla
