--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ importMethodsFrom(nucleR, filterFFT, peakDetection)
 importFrom(parallel, mclapply)
 
 importMethodsFrom(IRanges, as.vector, sort, coverage, disjointBins, unlist,
-                  space)
+                  space, ranges)
 importFrom(IRanges, IRanges, reduce, findOverlaps)
 
 importClassesFrom(GenomicRanges, GRangesList)
