--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,6 @@ Maintainer: Ricard Illa <ricard.illa@irbbarcelona.org>
 Description: Single nucleosome molecule dynamics bewteen two reference states
 License: FreeBSD
 Depends: GenomicRanges
-Imports: methods, S4Vectors, BiocGenerics, IRanges, nucleR, parallel
+Imports: methods, BiocGenerics, IRanges, nucleR, parallel
 LazyLoad: yes
 Packaged: 2014-08-21 15:12:54 UTC; rilla
