--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,14 +8,13 @@ importMethodsFrom(nucleR, filterFFT, peakDetection)
 importFrom(parallel, mclapply)
 
 importMethodsFrom(IRanges, as.vector, sort, coverage, disjointBins, unlist,
-                  space, ranges)
-importFrom(IRanges, IRanges, reduce, findOverlaps)
+                  space, ranges, split)
+importFrom(IRanges, IRanges, reduce, findOverlaps, Rle, levels, queryHits,
+           subjectHits)
 
 importClassesFrom(GenomicRanges, GRangesList)
-importMethodsFrom(GenomicRanges, split, seqnames)
+importMethodsFrom(GenomicRanges, seqnames)
 importFrom(GenomicRanges, GRanges)
-
-importFrom(S4Vectors, Rle, levels, queryHits, subjectHits)
 
 useDynLib(NucDyn)
 export(nucleosomeDynamics, findHotspots, plotDynamics, set.a, set.b)
