--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2014-08-19
 Author: Ricard Illa
 Maintainer: Ricard Illa <ricard.illa@irbbarcelona.org>
 Description: Single nucleosome molecule dynamics bewteen two reference states
-License: FreeBSD
+License: file LICENSE
 Depends: GenomicRanges
 Imports: methods, S4Vectors, BiocGenerics, IRanges, nucleR, parallel
 LazyLoad: yes
