--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,8 @@
+useDynLib(NucDyn)
 import(methods)
 
 import(BiocGenerics)
-importMethodsFrom(BiocGenerics, mapply)
+importMethodsFrom(BiocGenerics, mapply, sort)
 
 importFrom(nucleR, coverage.rpm)
 importMethodsFrom(nucleR, filterFFT, peakDetection)
@@ -10,8 +11,8 @@ importFrom(parallel, mclapply, makeCluster, stopCluster)
 importFrom(plyr, ddply, dlply, rbind.fill)
 importFrom(doParallel, registerDoParallel)
 
-importMethodsFrom(IRanges, as.vector, sort, coverage, disjointBins, unlist,
-                  space, ranges, split, unique, match)
+importMethodsFrom(IRanges, as.vector, coverage, disjointBins, unlist,
+                  space, ranges, unique, match)
 importFrom(IRanges, IRanges, RangedData, reduce, findOverlaps)
 
 importFrom(S4Vectors, Rle, levels, queryHits, subjectHits)
@@ -20,5 +21,6 @@ importClassesFrom(GenomicRanges, GRangesList)
 importMethodsFrom(GenomicRanges, seqnames)
 importFrom(GenomicRanges, GRanges)
 
-useDynLib(NucDyn)
+importFrom(Rcpp, sourceCpp)
+
 export(nucleosomeDynamics, findHotspots, plotDynamics, set.a, set.b, applyThreshold, findPVals)
