--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1
 Date: 2014-08-19
 Author: Ricard Illa
 Maintainer: Ricard Illa <ricard.illa@irbbarcelona.org>
-Description: Single nucleosome molecule dynamics bewteen two reference states
+Description: Nucleosome occupancy dynamic comparison between two reference states.
 License: file LICENSE
 Depends: GenomicRanges
 Imports: methods, S4Vectors, BiocGenerics, IRanges, nucleR, parallel, plyr, doParallel, Rcpp
