--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,4 @@ importMethodsFrom(IRanges,width)
 importMethodsFrom(S4Vectors,Rle)
 importMethodsFrom(S4Vectors,space)
 importMethodsFrom(nucleR,filterFFT)
+useDynLib("")
