--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(findHotspots)
 export(findPVals)
 export(nucleosomeDynamics)
+import(BiocGenerics)
+import(Rcpp)
+import(doParallel)
 importClassesFrom(GenomicRanges,GRangesList)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
@@ -24,9 +27,9 @@ importMethodsFrom(IRanges,disjointBins)
 importMethodsFrom(IRanges,end)
 importMethodsFrom(IRanges,ranges)
 importMethodsFrom(IRanges,reduce)
+importMethodsFrom(IRanges,space)
 importMethodsFrom(IRanges,start)
 importMethodsFrom(IRanges,width)
 importMethodsFrom(S4Vectors,Rle)
-importMethodsFrom(S4Vectors,space)
 importMethodsFrom(nucleR,filterFFT)
 useDynLib(NucDyn)
