modify findHotspots (shiftP1-shiftP2), sample data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,14 @@
 export(findHotspots)
 export(findPVals)
 export(nucleosomeDynamics)
+export(set.a)
+export(set.b)
 import(BiocGenerics)
 import(Rcpp)
 import(doParallel)
 importClassesFrom(GenomicRanges,GRangesList)
 importFrom(GenomicRanges,GRanges)
+importFrom(GenomicRanges,findOverlaps)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,coverage)
 importFrom(graphics,arrows)
